<resources>
    <string name="app_name">BlueKare</string>
    <string name="title_activity_map">Map</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="fragment1">Fragment1</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="user_name">USER NAME</string>
    <string name="user_email">user@user.com</string>
    <string name="team_name">Team Name</string>
    <string name="fab">FloatingActionButton</string>
    <string name="patient_name">이름</string>
    <string name="patient_sex">성별</string>
    <string name="patient_age">나이</string>
    <string name="patient_address">거주지</string>
    <string name="patient_socialstatus">사회경제상태</string>
    <string name="patient_job">현재 직업</string>
    <string name="patient_marriage">결혼 상태</string>
    <string name="patient_education">교육 정도</string>
    <string name="patient_education_total">총 교육 연한(년)</string>
    <string name="record_questionb_1">총 삽화 횟수(현재 삽화 포함)</string>
    <string name="record_questionb_2">현재의 우울증삽화가 시작된 시기</string>
    <string name="record_questionb_3">첫 번째 우울증삽화가 시작된 시기</string>
    <string name="record_questionb_4">과거 삽화 시 정신병적 증상(환청, 피해의식) 동반</string>
    <string name="record_questionb_5">자살에 대해서 심각한 고민을 해 본 적이 있습니까? (자살사고)</string>
    <string name="record_questionb_6">자살에 대해서 구체적인 계획을 세워 본 적이 있습니까? (자살계획)</string>
    <string name="record_questionb_7">자살 시도를 한 적이 있습니까?</string>
    <string name="record_questionb_8">계절성 변화</string>
    <string name="record_questionb_9">생리 전 증후군</string>
    <string name="record_questionc_1">가족이나 친척의 정신과 병력</string>
    <string name="record_questionc_2_1_1">1) 환자와의 관계</string>
    <string name="record_questionc_2_1_2">1) 진단명</string>
    <string name="record_questionc_2_1_3">1) 치료유무</string>
    <string name="record_questionc_2_2_1">2) 환자와의 관계</string>
    <string name="record_questionc_2_2_2">2) 진단명</string>
    <string name="record_questionc_2_2_3">2) 치료유무</string>
    <string name="record_questionc_2_3_1">3) 환자와의 관계</string>
    <string name="record_questionc_2_3_2">3) 진단명</string>
    <string name="record_questionc_2_3_3">3) 치료유무</string>
    <string name="record_questiond_1">과거 또는 현재 내외과적 질환 유무 / Surgical history</string>
    <string name="record_questiond_2_1_1">1) 진단명</string>
    <string name="record_questiond_2_1_2">1) 진단연도</string>
    <string name="record_questiond_2_1_3">1) 소견</string>
    <string name="record_questiond_2_2_1">2) 진단명</string>
    <string name="record_questiond_2_2_2">2) 진단연도</string>
    <string name="record_questiond_2_2_3">2) 소견</string>
    <string name="record_questiond_2_3_1">3) 진단명</string>
    <string name="record_questiond_2_3_2">3) 진단연도</string>
    <string name="record_questiond_2_3_3">3) 소견</string>


    <string name="desc">Step Count</string>
    <string name="title1">Today</string>
    <string name="unit1">Steps</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="connect_to_shealth">Connect to Samsung Health</string>

    <string name="notice">Notice</string>
    <string name="msg_perm_acquired">All permissions should be acquired</string>
    <string name="msg_conn_not_available">Connection with Samsung Health is not available</string>
    <string name="msg_req_install">Please install Samsung Health</string>
    <string name="msg_req_upgrade">Please upgrade Samsung Health</string>
    <string name="msg_req_enable">Please enable Samsung Health</string>
    <string name="msg_req_agree">Please agree to Samsung Health policy</string>
    <string name="msg_req_available">Please make Samsung Health available</string>

    <string name="hippo_abs_server">http://jdi.bitzflex.com:4000/</string>
    <string name="create_device">api/v1/devices</string>
    <string name="registration">api/v1/registration</string>
    <string name="login">api/v1/session</string>
    <string name="register_service">api/v1/services</string>
    <string name="renew">api/v1/session/renew</string>
    <string name="post_mqtt">api/v1/data/up</string>
    <string name="fetch_mongo">api/v1/data</string>
    <string name="discuss_about_header">성별</string>
</resources>