<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="피험자 정보 기입"
        android:textAlignment="center"
        android:textColor="#8FC838"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="B.\t정신과적 병력 평가"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:autoSizeTextType="uniform"
            android:padding="15dp"
            android:text="@string/record_questionb_1"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/record_questionb_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="username"
            android:background="@drawable/et_custom"
            android:hint="@string/record_questionb_1"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:autoSizeTextType="uniform"
            android:padding="15dp"
            android:text="@string/record_questionb_2"
            android:textAlignment="textStart" />


        <EditText
            android:id="@+id/record_questionb_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="username"
            android:background="@drawable/et_custom"
            android:hint="@string/record_questionb_2"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textSize="15sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:autoSizeTextType="uniform"
            android:padding="15dp"
            android:text="@string/record_questionb_3"
            android:textAlignment="textStart" />


        <EditText
            android:id="@+id/record_questionb_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="username"
            android:background="@drawable/et_custom"
            android:hint="@string/record_questionb_3"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:autoSizeTextType="uniform"
            android:padding="15dp"
            android:text="@string/record_questionb_4"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/record_questionb_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/et_custom"
            android:hint="@string/record_questionb_4"
            android:inputType="numberDecimal"
            android:padding="15dp"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:autoSizeTextType="uniform"
            android:padding="15dp"
            android:text="@string/record_questionb_5"
            android:textAlignment="textStart" />

        <Spinner
            android:id="@+id/record_questionb_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:padding="15dp"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:autoSizeTextType="uniform"
            android:padding="15dp"
            android:text="@string/record_questionb_6"
            android:textAlignment="textStart" />

        <Spinner
            android:id="@+id/record_questionb_6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:padding="15dp"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:autoSizeTextType="uniform"
            android:padding="15dp"
            android:text="@string/record_questionb_7"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/record_questionb_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/et_custom"
            android:hint="@string/record_questionb_7"
            android:inputType="numberDecimal"
            android:padding="15dp"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:autoSizeTextType="uniform"
            android:padding="15dp"
            android:text="@string/record_questionb_8"
            android:textAlignment="textStart" />

        <Spinner
            android:id="@+id/record_questionb_8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:padding="15dp"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:autoSizeTextType="uniform"
            android:padding="15dp"
            android:text="@string/record_questionb_9"
            android:textAlignment="textStart" />

        <Spinner
            android:id="@+id/record_questionb_9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:padding="15dp"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/preButtonB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:text="이전"
            android:textAlignment="center"
            android:textSize="20sp" />
        <Button
            android:id="@+id/nextButtonB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:text="다음"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>